# federust

./: .gitignore  LICENSE  README.md  README.org  error.org
.github/workflows/: static.yml
app-federated-learning/: .gitignore  Cargo.toml  README.md
app-federated-learning/migrations/: 20240508100034_courde.down.sql  20240508100034_courde.up.sql  20240509140732_book.down.sql  20240509140732_book.up.sql
app-federated-learning/src/: errors.rs  main.rs  routers.rs
app-federated-learning/src/auth/: mod.rs  register.rs
app-federated-learning/src/client/: models.rs
app-federated-learning/src/database/: book.rs  call.rs  conn.rs  mod.rs  user.rs
app-federated-learning/src/model/: book.rs  user.rs
app-federated-learning/src/server/: mod.rs
app-federated-learning/static/: project.html  register.html
book/: README.md  book.toml
book/book/: 404.html  Client.html  Database.html  Development.html  Function.html  Initialization.html  Interface.html  Introduction.html  ONNX.html  Privacy.html  Robustness.html  Server.html  Usecases.html  WebApp.html  index.html  print.html  searchindex.js  searchindex.json
book/src/: Client.md  Database.md  Development.md  Function.md  Initialization.md  Interface.md  Introduction.md  ONNX.md  Privacy.md  (+5 more)
interface/: README.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
liberal-federated-learning/: Cargo.toml  LICENSE_MIT  README.md
rest-federated-learning/: Cargo.toml  README.md  api.rest
wasm-federated-learning/: Cargo.toml
wasm-federated-learning/client-module/src/: lib.rs
wasm-federated-learning/migrations/: 20240507163105_user.up.sql  20240507163309_project.up.sql
wasm-federated-learning/server-module/: Cargo.toml
wasm-federated-learning/server-module/src/: lib.rs
wasm-federated-learning/src/: lib.rs
wasm-federated-learning/src/server/: mod.rs  serverutils.rs
(+48 files in other folders)
