[package]
name = "app-federated-learning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.5"
actix-web = "4.5.1"
dotenv = "0.15.0"
futures = "0.3.30"
serde = {version= "1.0.201", features=["derive"]}
serde_json = "1.0.117"
tera = "1.19.1"
tokio = {version = "1.37.0", features = ["full"]}
sqlx = {version = "0.7", features = ["postgres", "runtime-tokio-rustls", "json", "uuid"]}